# dice

./: CLAUDE.md  Cargo.toml  README.md  d6.blend  meson.build  org.lesslie.dice.json  unsaved file 1
.cargo/: config.toml
.claude/: settings.local.json
data/: gschemas.compiled  meson.build  org.lesslie.dice.desktop.in  org.lesslie.dice.gschema.xml  org.lesslie.dice.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES
src/: animated_roll.rs  application.rs  config.rs  dice.gresource.xml  dice_area.rs  die.rs  main.rs  meson.build  preferences.rs  roll_history.rs  sidebar.rs  window.blp  window.rs  window.ui
src/glium_gl_area/: imp.rs  mod.rs
src/gtk/: help-overlay.blp
