[package]
name = "dice"
version = "0.1.0"
edition = "2021"

[dependencies]
epoxy = "0.1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gl = "0.14.0"
glium = "0.34.0"
gtk = { version = "0.7", package = "gtk4" }
libloading = "0.8.3"
rand = "0.8.5"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
