[package]
name = "dice"
version = "0.3.0"
edition = "2021"

[dependencies]
epoxy = "0.1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gl = "0.14.0"
glium = "0.34.0"
graphene-rs = "0.22"
gtk = { version = "0.11", package = "gtk4", features = ["v4_12"] }
libloading = "0.8.3"
rand = { version = "0.8.5", features = ["small_rng"] }

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_5"]
